--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.7.0
   freezed_annotation: ^2.2.0
-
+  get: ^4.6.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
