--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   freezed_annotation: ^2.2.0
   get: ^4.6.5
   fluttertoast: ^8.1.2
-  
+  firebase_auth: ^4.10.1
+  firebase_remote_config: ^4.2.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
